<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/captura_datos"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monto_prestamo"/>

    <EditText
        android:id="@+id/txtMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/plazo_prestamo"
                android:textAlignment="center"
                />
            <TextView
                android:layout_column="2"
                android:text="@string/periodicidad_pago"
                android:textAlignment="center"
                />
        </TableRow>

        <TableRow>
            <EditText
                android:layout_column="1"
                android:id="@+id/txtPlazo"/>

            <Spinner
                android:layout_column="2"
                android:id="@+id/spnPlazos"
                android:textAlignment="center">
            </Spinner>
        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasa_interes"
        />
    <EditText
        android:id="@+id/txt_tasa_interes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_realizar_cotizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_realizar_cotizacion"/>
    <Button
        android:id="@+id/btnLimpiarCampos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpiar"/>


</LinearLayout>